# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml
configuration/: base.yaml  local.yaml  spec.yaml
migrations/: 20240305080503_make_status_not_null_in_subscriptions.sql  20240305081542_create_subscription_tokens_table.sql  20240404092512_create_users_table.sql  20240404100005_rename_password_column.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
